log
Thu 24 Aug 2023 08:49:01 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:1: error: control reaches end of non-void function [-Werror=return-type]
   35 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6a6be17
Thu 24 Aug 2023 08:49:35 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:1: error: control reaches end of non-void function [-Werror=return-type]
   35 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d18e27c
Thu 24 Aug 2023 08:57:07 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
2543c95
Fri 25 Aug 2023 08:04:36 PM UTC: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  5|4
total_score: 25/70
0c95e62
Fri 25 Aug 2023 08:08:02 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:63:31: error: expected ‘;’ before ‘return’
   63 |     list->current = list->tail
      |                               ^
      |                               ;
   64 |     return list->current->data
      |     ~~~~~~                     
list.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6370936
Fri 25 Aug 2023 08:08:09 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
7ea6bc6
Fri 25 Aug 2023 08:08:55 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
test.c: In function ‘prevList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:100:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
  100 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:91:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   91 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:78:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   78 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3597d9b
Fri 25 Aug 2023 08:09:02 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘prevList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:100:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
  100 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:91:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   91 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:78:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   78 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bc2b3d2
Fri 25 Aug 2023 08:09:42 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
de69cf5
Fri 25 Aug 2023 08:20:39 PM UTC: 
 list.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  10|2
total_score: 45/70
487ea47
Fri 25 Aug 2023 08:21:46 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:90:5: error: expected ‘;’ before ‘if’
   90 |     if (list->head != NULL) {
      |     ^~
Compilation failed
6eb323a
Fri 25 Aug 2023 08:21:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
57507b1
Fri 25 Aug 2023 08:43:38 PM UTC: 
 list.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  10|2
total_score: 45/70
16b1048
Fri 25 Aug 2023 08:45:48 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
ff13d25
